rules.v4
# Generated by ACSA AutoInstaller #
#
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
#
# NTP
-A INPUT -p udp -m udp --dport 123 -j ACCEPT
# DNS
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
#-A INPUT -p udp --port 53 -m hashlimit --hashlimit 1/minute --hashlimit-burst 5 -j ACCEPT
#-A INPUT -p udp --dport 53 --set --name dnslimit
#-A INPUT -p udp --dport 53 -m recent --update --seconds 60 --hitcount 11 --name dnslimit -j DROP
# SSH
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
# BACULA
-A INPUT -m state --state NEW -m tcp -p tcp --dport 9102 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 9103 -j ACCEPT
# SIP
-A INPUT -m udp -p udp --dport 5060:5062 -j ACCEPT
# IAX
-A INPUT -p udp -m udp --dport 4569 -j ACCEPT
# ZABBIX
-A INPUT -p udp -m udp --dport 10050 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 10050 -j ACCEPT
# RTP
-A INPUT -p udp -m udp --dport 10000:20000 -j ACCEPT
# SysLog
#-A INPUT -p udp -m udp --dport 514 -j ACCEPT
# HTTP
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8080 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 7080 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8888 -j ACCEPT
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 8000 -j ACCEPT
# HTTPS
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 8443 -j ACCEPT
# FTP Command
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 21 -j ACCEPT
# FTP Data (Active)
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 20 -j ACCEPT
# FTP Data (Passive)
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 50000:51000 -j ACCEPT
# AMI
-A INPUT -m state --state NEW -m tcp -p tcp --dport 5038 -j ACCEPT
#FOP
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 4445 -j ACCEPT
#HylaFax
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 4558:4559 -j ACCEPT
# MySQL
-A INPUT -m state --state NEW -m tcp -p tcp --dport 3306 -j ACCEPT
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 2812 -j ACCEPT
# VPN
#-A INPUT -i ppp0 -p tcp --dport 1723 -j ACCEPT
#-A INPUT -i ppp0 -p gre -j ACCEPT
# SNMP
-A INPUT -p udp -m udp --dport 161 -j ACCEPT
-A INPUT -p udp -m udp --dport 162 -j ACCEPT
#SMTP
-A INPUT -m state --state NEW -m tcp -p tcp -s 10.9.27.240/28 --dport 25 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp -s 178.236.34.176/28 --dport 25 -j ACCEPT
# Reject 
-A INPUT -j REJECT --reject-with icmp-host-prohibited
#-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
*nat
:PREROUTING ACCEPT [833:45300]
:INPUT ACCEPT [832:45216]
:OUTPUT ACCEPT [80:4860]
:POSTROUTING ACCEPT [15:900]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 1122 -j DNAT --to-destination 192.168.34.11:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2022 -j DNAT --to-destination 192.168.34.20:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2122 -j DNAT --to-destination 192.168.34.21:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 25422 -j DNAT --to-destination 192.168.34.254:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 19022 -j DNAT --to-destination 192.168.34.190:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 4422 -j DNAT --to-destination 192.168.34.44:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 18422 -j DNAT --to-destination 192.168.34.184:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 18522 -j DNAT --to-destination 192.168.34.185:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 16922 -j DNAT --to-destination 192.168.34.169:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 16822 -j DNAT --to-destination 192.168.34.168:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 16980 -j DNAT --to-destination 192.168.34.169:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 17022 -j DNAT --to-destination 192.168.34.170:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 17122 -j DNAT --to-destination 192.168.34.171:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 17222 -j DNAT --to-destination 192.168.34.172:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 17280 -j DNAT --to-destination 192.168.34.172:8080
-A PREROUTING -i eth0 -p tcp -m tcp --dport 17281 -j DNAT --to-destination 192.168.34.172:8000
-A PREROUTING -i eth0 -p tcp -m tcp --dport 17180 -j DNAT --to-destination 192.168.34.171:8080
-A PREROUTING -i eth0 -p tcp -m tcp --dport 17822 -j DNAT --to-destination 192.168.34.178:22
#-A PREROUTING -i eth0 -p tcp -m tcp --dport 6880 -j DNAT --to-destination 192.168.34.169:8006
#-A PREROUTING -i ppp0 -p tcp -m tcp --dport 8090 -j DNAT --to-destination 192.168.1.211:80
#-A PREROUTING -i ppp0 -p tcp -m tcp --dport 8092 -j DNAT --to-destination 10.69.75.199:80
#-A PREROUTING -i ppp0 -p tcp -m tcp --dport 8093 -j DNAT --to-destination 192.168.1.221:22
#-A PREROUTING -i ppp0 -p tcp -m tcp --dport 8094 -j DNAT --to-destination 192.168.1.221:443
#-A POSTROUTING -o ppp0 -j SNAT --to-source 85.185.121.52
#-A POSTROUTING -d 10.69.75.199 -p tcp --dport 80 -j SNAT --to-source 85.185.121.52
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
#
